--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,20 +1,21 @@
 <div>
-	<h1> Add New Appointment </h1>
+	<h1 class='main-font bold'> Add New Appointment: </h1>
 	<hr />
 	
 	<%= form_for @appointment do |f| %>
+	  <%= f.label :doctor_id %>
 	  <%= f.select :doctor_id, options_for_select(@doctors) %>
+	  <%= f.label :patient_id %>
 	  <%= f.select :patient_id, options_for_select(@patients) %>
 	  <%= f.date_field :date, required: true, placeholder: 'Date' %>
 	  <%= f.time_field :time, required: true, placeholder: 'Time' %>
-	  <%= f.text_field :location, required: true, placeholder: 'Location' %>
 	  <%= f.text_field :reason, required: true, placeholder: 'Reason' %>
 	
-	  <%= f.submit nil, class: 'btn' %>
+	  <%= f.submit nil, class: 'btn indigo darken-3' %>
 	<% end %>
 	
 	<br />
-	<%= link_to '<-- Back', doctors_path, class: 'btn' %>
+	<%= link_to '<-- Back', doctors_path, class: 'btn indigo darken-3' %>
 	<br />
 	<br />
 </div>
