--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
-<div class='utah-background box container'>
+	<div class='utah-background box container'>
   <div content>
-    <h1> About Utah Physicians </h1>
+    <h1 class='main-font bold'> About Utah Physicians </h1>
   </div>
 </div>
